# pycicl

./: README.md  bode.py  pyproject.toml  rogowski-harmonics.py  rogowski-linearity.py  rogowski-repeatability.py
pycicl/: instrument.py  oscilloscope.py  scpi.py
pycicl/rigol/: oscilloscope.py
pycicl/siglent/: siggen.py
